--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "antd": "^4.7.3",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "google-map-react": "^2.1.9",
+    "node-fetch": "^3.0.0-beta.9",
     "qrcode.react": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-google-maps": "^9.4.5",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
